fix a gap of 1px on homepage

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 .nav {
   margin: auto;
   width: 1524px;
-  margin-top: 16px;
+  margin-top: 15px;
   background-color: white;
   height: 70px;
   position: relative;
@@ -53,7 +53,7 @@
   background-image: url('http://i.imgur.com/YCTKppd.jpg');
   background-repeat: no-repeat;
   position: fixed;
-  top: 0px;
+  top: 2px;
   margin: auto;
   margin-top: 16px;
   margin-left: 50%;
